--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <!-- CSS Stylesheet Link -->
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <!-- JavaScript Script Link -->
+  <script src="js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  </script>
 </head>
 
 <!-- Header -->
@@ -39,19 +44,211 @@
 <body>
   <div id="site-back">
 
+    <!-- Modal PopUp // Delete Activiy -->
+    <div class="panel modal" id="modalDelete">
+      <div class="modal-header">
+        <h2 class="modal-title">Are you sure you want to delete the activity</h2>
+      </div>
+      <div class="modal-buttons">
+        <button onclick="closeModal(this)" class="popup-button" id="yes">Si</button>
+        <button onclick="closeModal(this)" class="popup-button" id="no">No</button>
+      </div>
+    </div>
+
+    <!-- Modal PopUp // Share Activiy -->
+    <div class="panel modal" id="modalShare">
+      <div class="modal-header">
+        <h2 class="modal-title">This text will be replaced by the Title of the activity.</h2>
+      </div>
+      <div class="modal-socials">
+          <a class="socials-icon" href="https://www.instagram.com">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1024px-Instagram_logo_2016.svg.png" class="social-icon" title="Instagram" alt="Instagram Logo">
+          </a>
+          <a class="socials-icon" href="https://www.twitter.com">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/1024px-Twitter_bird_logo_2012.svg.png" class="social-icon" title="Twitter" alt="Twitter Logo">
+          </a>
+          <a class="socials-link" href="https://www.facebook.com">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/600px-Facebook_Logo_%282019%29.png" class="social-icon" title="Facebook" alt="Facebook Logo">
+          </a>
+      </div>
+    </div>
+
+    <!-- Modal PopUp // Archive List Confirmation -->
+    <div class="panel modal" id="modalArchive">
+      <div class="modal-header">
+        <h2 class="modal-title">Are you sure you want to archive this list?</h2>
+      </div>
+      <div class="modal-buttons">
+        <button onclick="closeModal(this)" class="popup-button" id="yes">Si</button>
+        <button onclick="closeModal(this)" class="popup-button" id="no">No</button>
+      </div>
+    </div>
+    <!-- Added feature where the user can exit the modal by clicking outside it -->
+    <div onclick="closeModal(this)" id="overlay"></div>
+
     <!-- A Panel -->
     <div class="panel vertical-box" id="panelA">
+
+      <div class="vertical-box-header">
+        <h2>Title</h2>
+        <img class="icon" src="images/hamburger.png " alt="WebLogo"/>
+      </div>
+
+
+      <!----------------------------->
+      <div class="panel activity" id="A1">
+        <div class="outer-activity">
+          <div class="activity-inner-part activity-top-part">
+            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
+            <h3 class="activity-title">Texto1</h3>
+            <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
+          </div>
+          <div class="activity-inner-part activity-bottom-part">
+            <div class="tooltip">
+              <img onclick="like(this)" class="icon" src="images/like0.png" alt="LikeButton"/>
+              <span class="tooltiptext">Like this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img class="icon" src="images/comment.png" alt="CommentButton"/>
+              <span class="tooltiptext">Comment about this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
+              <span class="tooltiptext">Share this activity!</span>
+            </div>
+            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+          </div>
+        </div>
+      </div>
+      <!----------------------------->
+
+      <!----------------------------->
+      <div class="panel activity" id="A2">
+        <div class="outer-activity">
+          <div class="activity-inner-part activity-top-part">
+            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
+            <h3 class="activity-title">Texto2</h3>
+            <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
+          </div>
+          <div class="activity-inner-part activity-bottom-part">
+            <div class="tooltip">
+              <img onclick="like(this)" class="icon" src="images/like0.png" alt="LikeButton"/>
+              <span class="tooltiptext">Like this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img class="icon" src="images/comment.png" alt="CommentButton"/>
+              <span class="tooltiptext">Comment about this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
+              <span class="tooltiptext">Share this activity!</span>
+            </div>
+            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+          </div>
+        </div>
+      </div>
+      <!----------------------------->
+      <!----------------------------->
+      <div class="panel activity" id="A3">
+        <div class="outer-activity">
+          <div class="activity-inner-part activity-top-part">
+            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
+            <h3 class="activity-title">Texto3</h3>
+            <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
+          </div>
+          <div class="activity-inner-part activity-bottom-part">
+            <div class="tooltip">
+              <img onclick="like(this)" class="icon" src="images/like0.png" alt="LikeButton"/>
+              <span class="tooltiptext">Like this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img class="icon" src="images/comment.png" alt="CommentButton"/>
+              <span class="tooltiptext">Comment about this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
+              <span class="tooltiptext">Share this activity!</span>
+            </div>
+            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+          </div>
+        </div>
+      </div>
+      <!----------------------------->
+
 
     </div>
 
     <!-- B Panel -->
     <div class="panel vertical-box" id="panelB">
 
+      <div class="vertical-box-header">
+        <h2>Title</h2>
+        <img class="icon" src="images/hamburger.png " alt="WebLogo"/>
+      </div>
+
+      <!----------------------------->
+      <div class="panel activity" id="A4">
+        <div class="outer-activity">
+          <div class="activity-inner-part activity-top-part">
+            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
+            <h3 class="activity-title">Texto4</h3>
+            <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
+          </div>
+          <div class="activity-inner-part activity-bottom-part">
+            <div class="tooltip">
+              <img onclick="like(this)" class="icon" src="images/like0.png" alt="LikeButton"/>
+              <span class="tooltiptext">Like this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img class="icon" src="images/comment.png" alt="CommentButton"/>
+              <span class="tooltiptext">Comment about this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
+              <span class="tooltiptext">Share this activity!</span>
+            </div>
+            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+          </div>
+        </div>
+      </div>
+      <!----------------------------->
+      <!----------------------------->
+      <div class="panel activity" id="A5">
+        <div class="outer-activity">
+          <div class="activity-inner-part activity-top-part">
+            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
+            <h3 class="activity-title">Texto5</h3>
+            <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
+          </div>
+          <div class="activity-inner-part activity-bottom-part">
+            <div class="tooltip">
+              <img onclick="like(this)" class="icon" src="images/like0.png" alt="LikeButton"/>
+              <span class="tooltiptext">Like this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img class="icon" src="images/comment.png" alt="CommentButton"/>
+              <span class="tooltiptext">Comment about this activity!</span>
+            </div>
+            <div class="tooltip">
+              <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
+              <span class="tooltiptext">Share this activity!</span>
+            </div>
+            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+          </div>
+        </div>
+      </div>
+      <!----------------------------->
+
+
     </div>
 
     <!-- C Panel -->
     <div class="panel vertical-box" id="panelC">
 
+      <div class="vertical-box-header">
+        <h2>Title</h2>
+        <img class="icon" src="images/hamburger.png " alt="WebLogo"/>
+      </div>
     </div>
 
 
