Officially finished Part 1

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
     <div class="panel vertical-box" id="panelA">
 
       <div class="vertical-box-header">
-        <h2>Title</h2>
+        <h2>TitleA</h2>
         <div class="dropdown">
-          <img onclick="showMenu()" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
-          <div id="myDropdown" class="dropdown-content">
+          <img onclick="showMenu('myDropdownA')" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
+          <div id="myDropdownA" class="dropdown-content">
             <a onclick="openModal(this, 'modalArchive')">Archive</a>
             <a href="#">Do this</a>
             <a href="#">Do that</a>
@@ -241,10 +241,10 @@
     <div class="panel vertical-box" id="panelB">
 
       <div class="vertical-box-header">
-        <h2>Title</h2>
+        <h2>TitleB</h2>
         <div class="dropdown">
-          <img onclick="showMenu()" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
-          <div id="myDropdown" class="dropdown-content">
+          <img onclick="showMenu('myDropdownB')" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
+          <div id="myDropdownB" class="dropdown-content">
             <a onclick="openModal(this, 'modalArchive')">Archive</a>
             <a href="#">Do this</a>
             <a href="#">Do that</a>
@@ -313,10 +313,10 @@
     <div class="panel vertical-box" id="panelC">
 
       <div class="vertical-box-header">
-        <h2>Title</h2>
+        <h2>TitleC</h2>
         <div class="dropdown">
-          <img onclick="showMenu()" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
-          <div id="myDropdown" class="dropdown-content">
+          <img onclick="showMenu('myDropdownC')" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
+          <div id="myDropdownC" class="dropdown-content">
             <a onclick="openModal(this, 'modalArchive')">Archive</a>
             <a href="#">Do this</a>
             <a href="#">Do that</a>
