--- a/loginPage.html
+++ b/loginPage.html
@@ -96,13 +96,13 @@
           <h3 class="section-title">Account Information</h3>
 
           <div class="input-container">
-            <i class="fa fa-user form-icon"></i>
-            <input class="input-field" type="text" placeholder="Username" name="usrnm" required>
+            <i class="fa fa-envelope form-icon"></i>
+            <input class="input-field" type="text" placeholder="Email" name="email" required>
           </div>
 
           <div class="input-container">
             <i class="fa fa-key form-icon"></i>
-            <input class="input-field" type="password" placeholder="Password (max 8 characters: [a-z] [0-9])" name="psw" required>
+            <input class="input-field" type="password" placeholder="Password (max 8 characters: [a-z] [0-9])" name="password" required>
           </div>
 
         </div>
