--- a/index1.html
+++ b/index1.html
@@ -16,25 +16,24 @@
   <script src="js/script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-</script>
 </head>
 
 <!-- Header -->
 <header class="panel" id="headbox">
-  <img id="logo" src="images/faces.png" alt="WebLogo"/>
+  <img id="profile-image" src="images/puppy.png" alt="WebLogo"/>
 
-  <h1>Title</h1>
+  <h1>Bussy Puppy</h1>
 
   <!-- Header Option Menu -->
   <nav id="options">
     <button type="button" class="option-button">
-      <a href="index.html">Option 1</a>
+      <a href="index1.html">Option 1</a>
     </button>
     <button type="button" class="option-button">
-      <a href="index.html">Option 2</a>
+      <a href="index1.html">Option 2</a>
     </button>
     <button type="button" class="option-button">
-      <a href="index.html">Option 3</a>
+      <a href="index1.html">Option 3</a>
     </button>
   </nav>
 
@@ -86,18 +85,17 @@
     <!-- Added feature where the user can exit the modal by clicking outside it -->
     <div onclick="closeModal(this)" id="overlay"></div>
 
-    <!-- A Panel -->
     <div class="panel vertical-box" id="panelA">
 
       <div class="vertical-box-header">
-        <h2>TitleA</h2>
+        <h2>Done</h2>
         <div class="dropdown">
           <img onclick="showMenu('myDropdownA')" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
           <div id="myDropdownA" class="dropdown-content">
             <a onclick="openModal(this, 'modalArchive')">Archive</a>
             <a href="#">Do this</a>
             <a href="#">Do that</a>
-            <a href="#">Doodle</a>
+            <a href="#">Doodle?</a>
           </div>
         </div>
       </div>
@@ -106,8 +104,8 @@
       <div class="panel activity" id="A1">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto1</h3>
+            <img class="logo" src="images/tail.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Find my tail</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -123,7 +121,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">10/05/2019 12:00</h3>
           </div>
         </div>
       </div>
@@ -133,8 +131,8 @@
       <div class="panel activity" id="A2">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto2</h3>
+            <img class="logo" src="images/love.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Love my family</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -150,7 +148,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">30/10/2019 18:39</h3>
           </div>
         </div>
       </div>
@@ -159,8 +157,8 @@
       <div class="panel activity" id="A3">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto3</h3>
+            <img class="logo" src="images/breakfast.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Have breakfast</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -176,7 +174,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">31/10/2019 09:00</h3>
           </div>
         </div>
       </div>
@@ -185,8 +183,8 @@
       <div class="panel activity" id="A4">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto4</h3>
+            <img class="logo" src="images/dirty.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Get dirty</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -202,7 +200,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">26/10/2019 17:00</h3>
           </div>
         </div>
       </div>
@@ -211,8 +209,8 @@
       <div class="panel activity" id="A5">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto5</h3>
+            <img class="logo" src="images/pee.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Pee on the carpet</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -228,7 +226,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">21/10/2019 13:07</h3>
           </div>
         </div>
       </div>
@@ -241,7 +239,7 @@
     <div class="panel vertical-box" id="panelB">
 
       <div class="vertical-box-header">
-        <h2>TitleB</h2>
+        <h2>Doing</h2>
         <div class="dropdown">
           <img onclick="showMenu('myDropdownB')" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
           <div id="myDropdownB" class="dropdown-content">
@@ -257,8 +255,8 @@
       <div class="panel activity" id="A6">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto6</h3>
+            <img class="logo" src="images/poop.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Poop!</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -274,7 +272,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">31/10/2019 06:00</h3>
           </div>
         </div>
       </div>
@@ -284,8 +282,8 @@
       <div class="panel activity" id="A7">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto7</h3>
+            <img class="logo" src="images/bark.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Bark!</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -301,7 +299,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">31/10/2019 19:00</h3>
           </div>
         </div>
       </div>
@@ -313,7 +311,7 @@
     <div class="panel vertical-box" id="panelC">
 
       <div class="vertical-box-header">
-        <h2>TitleC</h2>
+        <h2>To do</h2>
         <div class="dropdown">
           <img onclick="showMenu('myDropdownC')" class="icon hamburguer-icon" src="images/hamburger.png " alt="WebLogo"/>
           <div id="myDropdownC" class="dropdown-content">
@@ -329,8 +327,8 @@
       <div class="panel activity" id="A8">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto8</h3>
+            <img class="logo" src="images/cat.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Befriend Cat</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -346,7 +344,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">12/12/2019 14:00</h3>
           </div>
         </div>
       </div>
@@ -356,8 +354,8 @@
       <div class="panel activity" id="A9">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto9</h3>
+            <img class="logo" src="images/nap.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Nap</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -373,7 +371,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">01/11/2019 15:30</h3>
           </div>
         </div>
       </div>
@@ -382,8 +380,8 @@
       <div class="panel activity" id="A10">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto10</h3>
+            <img class="logo" src="images/walk.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Go for a walk!</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -399,7 +397,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">01/11/2019 11:00</h3>
           </div>
         </div>
       </div>
@@ -408,8 +406,8 @@
       <div class="panel activity" id="A11">
         <div class="outer-activity">
           <div class="activity-inner-part activity-top-part">
-            <img id="logo" src="images/harold.jpg" alt="ActivityImage"/>
-            <h3 class="activity-title">Texto11</h3>
+            <img class="logo" src="images/big.png" alt="ActivityImage"/>
+            <h3 class="activity-title">Be BIG!</h3>
             <button onclick="openModal(this, 'modalDelete')" class="delete">&times</button>
           </div>
           <div class="activity-inner-part activity-bottom-part">
@@ -425,7 +423,7 @@
               <img onclick="openModal(this, 'modalShare')" class="icon" src="images/share.png" alt="ShareButton"/>
               <span class="tooltiptext">Share this activity!</span>
             </div>
-            <h3 class="activity-date">dd/mm/yyyy 00:00</h3>
+            <h3 class="activity-date">10/10/2020 11:53 </h3>
           </div>
         </div>
       </div>
